--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,9 +7,11 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
-        android:name="io.flutter.app.FlutterApplication"
         android:label="flash_chat"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+    android:name="flutterEmbedding"
+    android:value="2" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -21,9 +23,17 @@
                  until Flutter renders its first frame. It can be removed if
                  there is no splash screen (such as the default splash screen
                  defined in @style/LaunchTheme). -->
-            <meta-data
-                android:name="io.flutter.app.android.SplashScreenUntilFirstFrame"
-                android:value="true" />
+                  <!-- Specify that the launch screen should continue being displayed -->
+  <!-- until Flutter renders its first frame. -->
+  <meta-data
+    android:name="io.flutter.embedding.android.SplashScreenDrawable"
+    android:resource="@drawable/launch_background" />
+
+  <!-- Theme to apply as soon as Flutter begins rendering frames -->
+  <meta-data
+    android:name="io.flutter.embedding.android.LaunchTheme"
+    android:resource="@style/LaunchTheme"
+    />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
