--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,22 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0<3.0.0"
+  sdk: ">=2.12.0<3.0.0"
 
 dependencies:
+  animated_text_kit: ^4.2.1
+  # cloud_firestore: ^0.12.9+5
+  cupertino_icons: ^1.0.3
+  # firebase_auth: ^0.14.0+5
+  # firebase_core: ^0.4.0+9
   flutter:
     sdk: flutter
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
 
-  cupertino_icons: ^0.1.2
+  firebase_core: ^1.6.0
+  firebase_auth: ^3.1.0
+  cloud_firestore: ^2.5.1
+  firebase_storage: ^10.0.3
 
 dev_dependencies:
   flutter_test:
@@ -20,4 +29,4 @@ flutter:
   uses-material-design: true
 
   assets:
-  - images/
+    - images/
